<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/filter_class_by"

                android:textSize="18sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="0dp"
                android:scrollIndicators="none"
                >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipAndroid"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/android"
                            android:textColor="@android:color/white"
                            app:chipBackgroundColor="@color/secondaryColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipPhp"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/php"
                            android:textColor="@android:color/white"
                            app:chipBackgroundColor="@color/secondaryColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipJava"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/java"
                            android:textColor="@android:color/white"
                            app:chipBackgroundColor="@color/secondaryColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipNodeJs"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nodejs"
                            android:textColor="@android:color/white"
                            app:chipBackgroundColor="@color/secondaryColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipIot"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/iot"
                            android:textColor="@android:color/white"
                            app:chipBackgroundColor="@color/secondaryColor" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipComputerBasic"
                            style="@style/Widget.MaterialComponents.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/computer_basic"
                            android:textColor="@android:color/white"
                            app:chipBackgroundColor="@color/secondaryColor" />
                    </com.google.android.material.chip.ChipGroup>

                </FrameLayout>
            </HorizontalScrollView>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCourseList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/recycler_time_table_row" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>